src/test/ui/E0642.stderr
error[E0642]: patterns aren't allowed in methods without bodies
  --> $DIR/E0642.rs:12:12
   |
LL |     fn foo((x, y): (i32, i32)); //~ ERROR patterns aren't allowed in methods without bodies
   |            ^^^^^^ help: use an underscore to ignore the name: `_`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0642`.
